# BeerBitterRegressor

./: README.md  pyproject.toml
Docker/: Dockerfile
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: model_params.pkl  test_inst.json
data/: beer_submission.csv
notebooks/: EDA.ipynb
src/beerbitterregressor/: Catboost.ipynb  OneHotEncoding.ipynb  TargetEncoding.ipynb  predict.py  preprocessing.py  train.py
src/beerbitterregressor/app/: app.py  test_app.py
src/beerbitterregressor/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
src/beerbitterregressor/catboost_info/learn/: events.out.tfevents
src/beerbitterregressor/catboost_info/test/: events.out.tfevents
src/beerbitterregressor/notebooks/: Catboost.ipynb  EDA.ipynb  OneHotEncoding.ipynb  TargetEncoding.ipynb
