[tool.poetry]
name = "beerbitterregressor"
version = "0.1.0"
description = "Midterm project for ML Zoomcamp course"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
numpy = "^1.23.4"
pandas = "^1.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
