[tool.poetry]
name = "beerbitterregressor"
version = "0.1.0"
description = "Midterm project for ML Zoomcamp course"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
numpy = "^1.23.4"
pandas = "^1.5.1"
catboost = "^1.1"
click = "^8.1.3"
Flask = "^2.2.2"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.2"
flake8 = "^5.0.4"
black = "^22.10.0"

[tool.poetry.scripts]
train = "beerbitterregressor.train:train"
predict = "beerbitterregressor.predict:predict"
test_app = "beerbitterregressor.app.test_app:predict_req"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
